# job_application_system

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  render.yaml
backend/: README.md  main.py  pyproject.toml
backend/assets/: Resume (
backend/config/: constants.py  searches.yaml
backend/scratch/: test_linkedin.py  test_linkedin_provider.py
backend/src/: browser_driver.py  config_loader.py  crypto_manager.py  db.py  discovery.py  extractor.py  form_graph.py  gdrive_manager.py  job_crawler.py  scoring.py  server.py  universal_runner.py
backend/src/providers/: base_provider.py  cutshort_provider.py  foundit_provider.py  glassdoor_provider.py  hirist_provider.py  indeed_provider.py  instahyre_provider.py  linkedin_provider.py  naukri_provider.py  (+3 more)
backend/static/: index.html
backend/tests/: test_ats_section.py  test_resume_hub.py  test_system.py  test_universal_runner.py
config/: constants.py
doc/: database.md  deployment.md  production_mongodb_setup.md  usermanual.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.js
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
scratch/: test_crawl.py  test_scan.py
src/: browser_driver.py  crypto_manager.py  document_generator.py  gdrive_manager.py  naukri_runner.py  resume_hub.py  resume_tweaker.py  server.py
static/: app.js  index.html  styles.css
static/assets/: index-BQdJfh3z.css  index-Bgz5e9Bz.js  index-BjtxuLGg.js  index-Ch5EDg5e.css  index-D9uINEI_.css  index-VDAW9sUK.js
tests/: test_system.py
(+42 files in other folders)
